# machine_learning

./: .gitignore  README.md  nose_setup_coverage.cfg  pyproject.toml
.dvc/: .gitignore  config
tests/: test_column_preprocessors.py  test_dataset.csv  test_dataset2.csv  test_model_bayesian_ridge_regressor.py  test_model_class.py  test_model_classifier.py  test_model_dense_classifier.py  test_model_dense_regressor.py  test_model_elasticnet_regressor.py  test_model_gbt_classifier.py  test_model_gbt_regressor.py  test_model_keras.py  test_model_kernel_ridge_regressor.py  test_model_knn_classifier.py  test_model_knn_regressor.py  test_model_lgbm_classifier.py  test_model_lgbm_regressor.py  test_model_logger.py  test_model_logistic_regression_classifier.py  test_model_pipeline.py  test_model_pls_regressor.py  test_model_regressor.py  test_model_rf_classifier.py  test_model_rf_regressor.py  test_model_ridge_classifier.py  test_model_sgd_classifier.py  test_model_sgd_regressor.py  test_model_svm_classifier.py  test_model_svr_regressor.py  test_model_xgboost_classifier.py  test_model_xgboost_regressor.py  test_outlier_detection.py  test_preprocess.py  test_utils.py  test_utils_models.py
ynov-data/: submission.csv  test_housing.csv  train_housing.csv  train_housing_train.csv  train_housing_valid.csv  training_housing.csv  validating_housing.csv
ynov-notebooks/: Regression_linéaire.ipynb  TP1.ipynb  Untitled-1.ipynb  decision_tree.ipynb  linear_regression 61k.ipynb  linear_regression _57k.ipynb  linear_regression_61k.ipynb  missing-values.ipynb  qualitative-features.ipynb  (+3 more)
(+41 files in other folders)
